# mlops-llmops-evaluation-lab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/: agent_eval.json  drift_report.json  error_analysis.json  evidence_manifest.json  experiments.jsonl  metrics.json  model.json  regression_report.json  run_manifest.json  runtime_telemetry.json  runtime_traces.jsonl  threshold_report.json  traces.jsonl
config/: shared_evaluation_contract.json
data/: synthetic_customer_risk.csv
docs/: SHARED_AGENT_EVALUATION.md  agent_card.md  model_card.md
scripts/: verify_shared_reproducibility.py
src/mlops_eval/: __init__.py  agent.py  data.py  evaluation.py  model.py  pipeline.py  shared_evaluation.py  shared_pipeline.py
tests/: test_agent.py  test_data.py  test_model.py  test_pipeline.py  test_shared_evaluation.py
